--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,7 @@
 # YANGI .env FAYL YARATING VA
 # QUYIDAGI MA'LUMOTLARNI YOZING:
 
-ADMINS=12345678,12345677,12345676
-BOT_TOKEN=123452345243:Asdfasdfasf
+ADMINS=
+BOT_TOKEN=
 ip=localhost
+DATABASE_PATH=
