--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,7 @@
 # YANGI .env FAYL YARATING VA
 # QUYIDAGI MA'LUMOTLARNI YOZING:
 
-ADMINS=
-BOT_TOKEN=
+ADMINS=123456789
+BOT_TOKEN=fiajslkfjasdf:123456789
 ip=localhost
-DATABASE_PATH=
+DATABASE_PATH=support.db
