--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,11 @@
 # YANGI .env FAYL YARATING VA
 # QUYIDAGI MA'LUMOTLARNI YOZING:
 
-ADMINS=123456789
-BOT_TOKEN=fiajslkfjasdf:123456789
+ADMINS=12345678
+BOT_TOKEN=123456789:akjshdfjkahsuidjfnaskjdf
+WEBHOOK_HOST=https://domain.com
+WEBHOOK_PATH_NAME=webhook
+WEBAPP_HOST=localhost
+WEBAPP_PORT=3001
 ip=localhost
 DATABASE_PATH=support.db
